--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,49 @@
+# FIFA25 Bot - Dependências Python
+
+# Framework Web
 Flask==3.0.0
-Flask-SQLAlchemy==3.1.1
-Flask-CORS==4.0.0
-gunicorn==21.2.0
+Werkzeug==3.0.1
+
+# HTTP Requests
 requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
+urllib3==2.1.0
+
+# Scheduler
 APScheduler==3.10.4
-psycopg2-binary==2.9.9
-pandas==2.2.0
+
+# Data Processing
+pandas==2.1.4
 openpyxl==3.1.2
+
+# Database (escolha um)
+# PostgreSQL
+psycopg2-binary==2.9.9
+# OU SQLite (já incluído no Python)
+
+# ORM (opcional)
+SQLAlchemy==2.0.23
+
+# Logging e Monitoring
 python-dateutil==2.8.2
-pytz==2024.1
-colorlog==6.8.0
+
+# Telegram Bot (opcional)
+python-telegram-bot==20.7
+
+# Email (opcional - já incluído no Python)
+# smtplib é built-in
+
+# Web Scraping Alternativo (caso precise)
+# beautifulsoup4==4.12.2
+# selenium==4.16.0
+# webdriver-manager==4.0.1
+
+# Utils
+python-dotenv==1.0.0
+pytz==2023.3
+
+# Testing (desenvolvimento)
+# pytest==7.4.3
+# pytest-flask==1.3.0
+
+# Production Server
+gunicorn==21.2.0
