Update: descrição da mudança

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,26 @@
-# Configurações da aplicação
+# FIFA25 Bot - Variáveis de Ambiente
+# Copie este arquivo para .env e preencha os valores
+
+# Flask
 FLASK_ENV=production
+SESSION_SECRET=change-this-to-random-string
+
+# Scraper
+SCAN_INTERVAL=120
+RUN_SCRAPER=true
+
+# Database (Render configura automaticamente)
+# DATABASE_URL=postgresql://user:pass@host:port/dbname
+
+# Server
 PORT=5000
 
-# Banco de dados
-# Para desenvolvimento (SQLite)
-# DATABASE_URL=sqlite:///fifa25_bot.db
+# Telegram (Opcional)
+# TELEGRAM_TOKEN=your_bot_token_here
+# TELEGRAM_CHAT_ID=your_chat_id_here
 
-# Para produção (PostgreSQL no Render)
-DATABASE_URL=postgresql://usuario:senha@host:porta/database
-
-# Configurações de scraping
-SCRAPE_INTERVAL=30  # Intervalo em segundos
-
-# Logging
-LOG_LEVEL=INFO
-
-# API URLs
-API_BASE_URL=https://football.esportsbattle.com/api
+# Email SMTP (Opcional)
+# EMAIL_SMTP_SERVER=smtp.gmail.com
+# EMAIL_SMTP_PORT=587
+# EMAIL_USER=your_email@gmail.com
+# EMAIL_PASSWORD=your_app_password
