--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,32 @@
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv
 
 # IDE
 .vscode/
@@ -10,22 +35,37 @@
 *.swo
 *~
 
-# OS
-.DS_Store
-Thumbs.db
-
 # Logs
 *.log
+logs/
+app.log
+
+# Database
+*.db
+*.sqlite3
+*.sqlite
 
 # Environment variables
 .env
 .env.local
+.env.*.local
 
-# Reports
-reports/
-*.xlsx
-*.csv
+# OS
+.DS_Store
+Thumbs.db
 
-# Test coverage
+# Backup files
+*.bak
+*.backup
+backup/
+
+# Test files
+.pytest_cache/
 .coverage
 htmlcov/
+.tox/
+
+# Temporary files
+*.tmp
+temp/
+tmp/
