--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # FIFA25 Bot - Dependências Python
+# Versão Final Atualizada
 
 # Framework Web
 Flask==3.0.0
@@ -8,42 +9,41 @@ Werkzeug==3.0.1
 requests==2.31.0
 urllib3==2.1.0
 
-# Scheduler
+# Scheduler (Background Jobs)
 APScheduler==3.10.4
 
-# Data Processing
+# Data Processing (Opcional - para relatórios)
 pandas==2.1.4
 openpyxl==3.1.2
 
-# Database (escolha um)
-# PostgreSQL
+# Database
+# PostgreSQL (para Render)
 psycopg2-binary==2.9.9
-# OU SQLite (já incluído no Python)
-
-# ORM (opcional)
+# SQLAlchemy (ORM opcional)
 SQLAlchemy==2.0.23
 
-# Logging e Monitoring
+# Date/Time
 python-dateutil==2.8.2
-
-# Telegram Bot (opcional)
-python-telegram-bot==20.7
-
-# Email (opcional - já incluído no Python)
-# smtplib é built-in
-
-# Web Scraping Alternativo (caso precise)
-# beautifulsoup4==4.12.2
-# selenium==4.16.0
-# webdriver-manager==4.0.1
-
-# Utils
-python-dotenv==1.0.0
 pytz==2023.3
 
-# Testing (desenvolvimento)
-# pytest==7.4.3
-# pytest-flask==1.3.0
+# Environment Variables
+python-dotenv==1.0.0
 
 # Production Server
 gunicorn==21.2.0
+
+# Telegram Bot (Opcional - para notificações)
+# Descomente se quiser usar
+# python-telegram-bot==20.7
+
+# Web Scraping Alternativo (Opcional - caso precise de Selenium)
+# Descomente apenas se necessário
+# beautifulsoup4==4.12.2
+# lxml==5.1.0
+# selenium==4.16.0
+# webdriver-manager==4.0.1
+
+# Testing (Desenvolvimento - Opcional)
+# pytest==7.4.3
+# pytest-flask==1.3.0
+# pytest-cov==4.1.0
